[project]
name = "oliva_assistant"
version = "0.1.0"
description = "Voice assistant agent"
readme = "README.md"
requires-python = "~=3.11"
authors = [
    {name = "GeraDeluxer", email = "gerardoangeln@gmail.com"}
]
dependencies = [
    "aiofile",
    "livekit-agents",
    "livekit-plugins-openai",
    "livekit-plugins-silero",
    "livekit-plugins-deepgram",
    "python-dotenv",
    "loguru>=0.7.3",
    "pydantic>=2,<3",
    "pydantic-settings>=2.6.1",
    "superlinked==17.1.0",
    "langchain>=0.3.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    "langchainhub>=0.1.14",
    "langchain-text-splitters>=0.0.1",
    "chromadb",
    "tiktoken",
    "beautifulsoup4",
    "jq",
    "langchain-qdrant",
]

[dependency-groups]
dev = [
    "ruff>=0.7.2",
]

[tool.poetry]
packages = [
    { include = "app" }
]